2003-07-22  Jakub Jelinek  <jakub@redhat.com>

	* descr.h (struct _pthread_descr_struct): Provide p_res member
	even if USE_TLS && HAVE___THREAD.
	* sysdeps/pthread/res-state.c (__res_state): Return __resp
	if USE___THREAD.
	* manager.c: Include resolv.h.
	(pthread_start_thread): Initialize __resp.
	* libc-tls-loc.c (__res_state): Return __resp.
	* Makefile (tests): Add tst-_res1.
	(modules-names, extra-objs, test-extras, test-modules): Add support
	for test modules.
	($(objpfx)tst-_res1mod2.so): Depend on $(objpfx)tst-_res1mod1.so.
	($(objpfx)tst-_res1): Depend on $(objpfx)tst-_res1mod2.so and
	-lpthread.
	* tst-_res1.c: New test.
	* tst-_res1mod1.c: New test.
	* tst-_res1mod2.c: New test.

2003-07-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/bits/libc-lock.h: Define __libc_cleanup_push and
	__libc_cleanup_pop.

	* tst-cancel-wrappers.sh: lseek and llseek are no cancellation points.

2003-07-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc32/sysdep-cancel.h: Fix typo
	in test for compilation in libc.

2003-07-04  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/sysdep-cancel.h (PSEUDO): Use
	different symbol for the cancellation syscall wrapper and
	non-cancellation syscall wrapper.
	(PSEUDO_END): Define.

2003-07-05  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/elf/pt-initfini.c: Avoid .ent/.end.

2003-06-20  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sysdep-cancel.h: Support cancellation
	in librt.

2003-06-21  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/sysdep-cancel.h: Support cancellation
	in librt.

2003-06-20  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/Makefile (libpthread-routines):
	Remove ptw-osf_sigprocmask.

2003-06-18  Jakub Jelinek  <jakub@redhat.com>

	* internals.h (__librt_multiple_threads, __librt_enable_asynccancel,
	__librt_disable_asynccancel): Declare.